@@ -52,6 +52,7 @@
 * Github.auth_continuation type added
 * Github.handler type added
 * Github.Message exception added and raised when GitHub returns an API error
+* API.string_of_message added for human consumption of structured errors
 * Event submodule added with a variety of event sources
 * A new jar command, git-list-events, has been added to print events for a repo
 * A new test binary, parse_events, has been added which downloads and
